--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,3 +25,4 @@ jobs:
       run: |
         mvn -B package cobertura:cobertura
         bash <(curl -s https://codecov.io/bash)
+    - uses: codecov/codecov-action@v1
