--- a/jettyserver-scenario/pom.xml
+++ b/jettyserver-scenario/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>jetty-servlet</artifactId>
             <version>${jettyserver.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
